--- a/SRTN.css
+++ b/SRTN.css
@@ -1,13 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..1000&display=swap");
+
 body {
   font-family: Arial, sans-serif;
+  background-color: #fbeee9;
 }
 
 #input-container {
   margin-bottom: 20px;
 }
 
+#input-container label {
+  font-size: 22px;
+  font-weight: 800;
+  font-family: "Courier New", Courier, monospace;
+  margin: 0px 10px 0px 22px;
+}
+
+#input-container input[type="number"] {
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+#input-container button {
+  padding: 8px 20px;
+  font-size: 16px;
+  background-color: #4e2f01 /*#007bff*/;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.calculate {
+  padding: 8px 20px;
+  font-size: 16px;
+  background-color: #4e2f01;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
 #output-container {
-  margin-top: 30px;
+  padding: 20px;
+  background-color: #fbeee9;
+  border-radius: 5px;
+}
+
+#output-container h2 {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+#output-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+#output-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+#output-container {
+  margin-top: 05px;
 }
 
 #output-table {
@@ -19,4 +79,67 @@ body {
   border: 1px solid black;
   padding: 8px;
   text-align: center;
+  background-color: white;
+  height: 25px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+.container {
+  border: 3px solid #422800;
+  margin: 10px auto;
+  padding: 15px;
+  height: 1800px;
+  width: 1450px;
+  position: relative;
+  font-size: x-large;
+}
+
+h1 {
+  color: #422800;
+}
+
+.para {
+  font-size: 21px;
+  color: #422800;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+}
+
+.heading {
+  text-decoration: underline;
+}
+
+.heading_container {
+  border: 3px solid #422800;
+  margin: 5px auto;
+  padding: 15px;
+  height: 25px;
+  width: 1450px;
+  position: relative;
+  text-transform: inherit;
+  font-size: 150x;
+}
+
+.img1 {
+  margin: 10px 50px 0px 0px;
+  position: absolute;
+}
+
+.img2 {
+  margin: 10px 0px 0px 700px;
+}
+
+#process-input {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 900;
+  font-size: 18px;
+  margin: 2px 0px 0px 22px;
+}
+
+#process-input input[type="number"] {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 18px;
+  font-weight: 900;
 }
